src/test/ui/conditional-compilation/cfg-attr-invalid-predicate.stderr
error[E0537]: invalid predicate `foo`
  --> $DIR/cfg-attr-invalid-predicate.rs:11:7
   |
LL | #[cfg(foo(bar))] //~ ERROR invalid predicate `foo`
   |       ^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0537`.
