src/test/ui/conditional-compilation/cfg-attr-invalid-predicate.rs
#[cfg(foo(bar))] //~ ERROR invalid predicate `foo`
fn main() {}
